# rsbot

./: .gitignore  Cargo.toml  README.md
bot/: Cargo.toml  README.md  README.txt
bot/src/: actions.rs  bot_utils.rs  common.rs  controller.rs  lib.rs  player.rs
data/: mouse_paths.bincode
mouse/: Cargo.toml  README.md  record_mouse.py
mouse/src/: constants.rs  controller.rs  lib.rs  main.rs  parse.rs  parse_lib.rs  types.rs
screen/: Cargo.toml  README.md
screen/src/: action_letters.rs  action_text.rs  capture.rs  colors.rs  constants.rs  frame.rs  handler.rs  handling.rs  inventory.rs  lib.rs  locations.rs  main.rs  types.rs
userinput/: Cargo.toml  README.md
userinput/src/: .controller.rs.swp  constants.rs  controller.rs  lib.rs  types.rs
util/: Cargo.toml
util/src/: constants.rs  functions.rs  lib.rs  types.rs
