[package]
name = "bot"
version = "0.1.0"
authors = ["Matan Markind <matan.markind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = {path="../util"}
userinput = {path="../userinput"}
screen = {path="../screen"}
structopt = "0.3.17"
scrap = "0.5.0"
rand = "0.7.3"
enum-utils = "0.1.2"