[package]
name = "mouse"
version = "0.1.0"
authors = ["Matan Markind <matan.markind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
structopt = "0.3.17"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
once_cell = "1.4.0"