[package]
name = "util"
version = "0.1.0"
authors = ["Matan Markind <matan.markind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
rand = "0.7.3"